pyspark_submit 1b and 1c

--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,13 @@
   </script>
 </head>
 <body>
-  <div class= "row "> 
-    <div class=" col-12 header">
-      <h1> Mitegro Cron-Jobs GUI <h1>
+  <div class="main-wrap">
+    <div class="row header-top">
+      <div class="col-md-6" align="left"></div>
+      <div class="col-md-6" align="right">
+        <img class="m_logo" src="/logos/mitegro_logo.jpg" height="80" alt="mitegro">
+        <img class="s_logo" src="/logos/white.png" height="80" alt="synaigy">
+      </div>
     </div>
   </div>
   <div class="row">
